Tweak bug, so body overflow only removed on song page

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,11 +8,6 @@ html, body {
     color: #fff;
 }
 
-body {
-  overflow: hidden; /* Hide scrollbars */
-}
-
-
 a {
   text-decoration: none;
 }
